@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix mailbox sorting in traditional view (Bug #11278).
 * [mms] Fix regression in IMAP cache query script preventing stats in all mailbox reports (Bug #11265).
 * [mms] Fix regression in creating submailboxes in dynamic view.
 * [mms] Fix browser-based AJAX autocompletion (Bug #11233).
@@ -2600,6 +2601,7 @@
    <date>2012-07-13</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix mailbox sorting in traditional view (Bug #11278).
 * [mms] Fix regression in IMAP cache query script preventing stats in all mailbox reports (Bug #11265).
 * [mms] Fix regression in creating submailboxes in dynamic view.
 * [mms] Fix browser-based AJAX autocompletion (Bug #11233).
